--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   },
   "devDependencies": {
     "eslint": "^8.57.0",
-    "eslint-config-next": "latest"
+    "eslint-config-next": "latest",
+    "prettier": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.1"
   }
 }
