--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "date-fns": "^3.6.0",
     "next": "latest",
     "next-sanity": "^9.0.18",
+    "nodemailer": "^6.9.13",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
+    "resend": "^3.2.0",
     "sanity": "^3.42.1",
     "sanity-plugin-asset-source-unsplash": "^3.0.1",
     "server-only": "^0.0.1",
@@ -39,6 +41,7 @@
     "typescript": "5.4.5"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.15",
     "eslint": "^8.57.0",
     "eslint-config-next": "latest",
     "prettier": "^3.3.1",
