--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.19",
     "date-fns": "^3.6.0",
+    "lenis": "^1.1.3",
     "next": "latest",
     "next-sanity": "^9.0.18",
     "nodemailer": "^6.9.13",
