--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@portabletext/react": "^3.1.0",
     "@react-email/components": "0.0.19",
     "@sanity/assist": "^3.0.4",
     "@sanity/icons": "^2.11.8",
