--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lenis": "^1.1.3",
     "next": "latest",
     "next-sanity": "^9.0.18",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
