--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@portabletext/react": "^3.1.0",
     "@react-email/components": "0.0.19",
     "@sanity/assist": "^3.0.4",
+    "@sanity/code-input": "^4.1.4",
     "@sanity/icons": "^2.11.8",
     "@sanity/image-url": "^1.0.2",
     "@sanity/preview-url-secret": "^1.6.13",
@@ -38,6 +39,7 @@
     "react-dom": "^18.3.1",
     "react-email": "2.1.4",
     "react-hook-form": "^7.51.5",
+    "react-icons": "^5.2.1",
     "resend": "^3.2.0",
     "sanity": "^3.42.1",
     "sanity-plugin-asset-source-unsplash": "^3.0.1",
