--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typegen": "sanity schema extract && sanity typegen generate"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@hookform/resolvers": "^3.6.0",
     "@portabletext/react": "^3.1.0",
     "@react-email/components": "0.0.19",
@@ -29,6 +30,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.19",
     "date-fns": "^3.6.0",
+    "gsap": "^3.12.5",
     "lenis": "^1.1.3",
     "next": "latest",
     "next-sanity": "^9.0.18",
