--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "resend": "^3.2.0",
     "sanity": "^3.42.1",
     "sanity-plugin-asset-source-unsplash": "^3.0.1",
+    "sanity-plugin-documents-pane": "^2.3.0",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
     "styled-components": "^6.1.11",
