Refactor page component: Remove console.log statement
Remove the console.log statement in the Page component of the liste-des-fonds directory to clean up the code.

Refactor .env.local.example: Add missing environment variables

Add the missing environment variables for the site URL, resend mail API key, mailchimp API key, mailchimp API server, and mailchimp audience ID in the .env.local.example file.

Refactor layout component: Update metadata

Update the metadata in the layout component to set the title and description for the Archives LGBTQI+.

Refactor package.json: Add axios and formik dependencies

Add the axios and formik dependencies to the package.json file.

Refactor LDFDesktopSidebar component: Remove console.log statement

Remove the console.log statement in the LDFDesktopSidebar component to clean up the code.

Refactor globals.css: Update styles for newsletter input

Update the styles for the newsletter input in the globals.css file to make it full width.

Add newsletter route

Add the newsletter route to handle POST requests for subscribing to the newsletter.

Refactor IntroTextAndNewsletter component: Update newsletter input

Update the newsletter input in the IntroTextAndNewsletter component to use the Newsletters component.

--- a/.env.local.example
+++ b/.env.local.example
@@ -2,3 +2,14 @@
 NEXT_PUBLIC_SANITY_PROJECT_ID=
 NEXT_PUBLIC_SANITY_DATASET=
 SANITY_API_READ_TOKEN=
+
+# TODO: Change the following to the correct values
+NEXT_PUBLIC_SITE_URL=
+
+# Resend Mail API key
+RESEND_API_KEY=
+
+# Mailchimp API key
+MAILCHIMP_API_KEY=
+MAILCHIMP_API_SERVER=
+MAILCHIMP_AUDIENCE_ID=
