--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@types/react-dom": "^18.3.0",
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.7",
     "date-fns": "^3.6.0",
+    "formik": "^2.4.6",
     "gsap": "^3.12.5",
     "lenis": "^1.1.3",
     "next": "latest",
@@ -52,6 +54,7 @@
     "styled-components": "^6.1.11",
     "tailwindcss": "^3.4.3",
     "typescript": "5.4.5",
+    "yup": "^1.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
