--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+
+      - name: Clean Install
+        run: npm clean-install
+
+      - name: Build
         env: # Or as an environment variable
           NEXT_PUBLIC_SANITY_DATASET: ${{ secrets.NEXT_PUBLIC_SANITY_DATASET }}
           NEXT_PUBLIC_SANITY_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_SANITY_PROJECT_ID }}
-      - run: npm clean-install
-      - run: npm run build --if-present
-      - run: npx sanity build --no-auto-updates --yes
+        run: npm run build --if-present
 
       - name: Build the Docker image
         run: docker build . --file docker/Dockerfile --tag archiveslgbtqi:$(date +%s) --tag archiveslgbtqi:latest
