--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          cache: 'npm'
-
-      - name: Clean Install
-        run: npm clean-install
 
       - name: Create .env file
         run: |
@@ -32,8 +28,37 @@ jobs:
           echo BREVO_LIST_ID=${{ vars.BREVO_LIST_ID }} >> .env
           echo BREVO_WELCOME_EMAIL_TEMPLATE_ID=${{ vars.BREVO_WELCOME_EMAIL_TEMPLATE_ID }} >> .env
 
+      - name: Clean Install
+        run: npm clean-install
+
       - name: Build
         run: npm run build --if-present
 
-      - name: Build the Docker image
-        run: docker build . --file docker/Dockerfile --tag archiveslgbtqi:$(date +%s) --tag archiveslgbtqi:latest
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/ymage/archiveslgbtqi
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: docker/Dockerfile
+          push: true
+          tags: |
+            archiveslgbtqi:$(date +%s)
+            ymage/archiveslgbtqi:latest
