--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ name: Node.js CI
 on:
   push:
     branches: [ "main" ]
+    tags:
+      - 'v*'
   pull_request:
     branches: [ "main" ]
 
@@ -51,7 +53,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/ymage/archiveslgbtqi
+          images: ymage/archiveslgbtqi
 
       - name: Build and push
         uses: docker/build-push-action@v6
@@ -59,6 +61,5 @@ jobs:
           context: .
           file: docker/Dockerfile
           push: true
-          tags: |
-            archiveslgbtqi:$(date +%s)
-            ymage/archiveslgbtqi:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
