--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sanity/code-input": "^4.1.4",
     "@sanity/icons": "^2.11.8",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/locale-fr-fr": "^1.2.11",
     "@sanity/preview-url-secret": "^1.6.13",
     "@sanity/vision": "^3.42.1",
     "@tailwindcss/typography": "^0.5.13",
