--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,6 +83,18 @@ jobs:
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
 
+      - name: Cleanup Registry
+        uses: snok/container-retention-policy@v3.0.0
+        with:
+          account: user
+          token:  ${{ secrets.GHCR_TOKEN }}
+          image-names: "${{ env.IMAGE_NAME}}*"
+          image-tags: "!latest !main !v*"  # target any image that has a tag starting with the word test or dev
+          keep-n-most-recent: 2
+          shas-to-skip: ''
+          cut-off: 1w
+          dry-run: false
+
       - name: Reload Archives LGBTQI Website
         uses: appleboy/ssh-action@v1.1.0
         with:
