--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,11 +87,10 @@ jobs:
         uses: snok/container-retention-policy@v3.0.0
         with:
           account: user
-          token:  ${{ secrets.GHCR_TOKEN }}
+          token: ${{ secrets.GHCR_TOKEN }}
           image-names: "${{ env.IMAGE_NAME}}*"
-          image-tags: "!latest !main !v*"  # target any image that has a tag starting with the word test or dev
+          image-tags: "!latest !main !v*"
           keep-n-most-recent: 2
-          shas-to-skip: ''
           cut-off: 1w
           dry-run: false
 
